# spenser

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: anchor.rs  close.rs  init.rs  list.rs  mod.rs  publish.rs  respond.rs  status.rs  switch.rs
crates/core/: Cargo.toml
crates/core/src/: dir.rs  lib.rs  producer.rs  slicer.rs  vcs.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs  producer.rs  repo.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs  producer.rs  slicer.rs  vcs.rs
crates/slicer/: Cargo.toml
crates/slicer/src/: lib.rs  region_slicer.rs
crates/types/: Cargo.toml
crates/types/src/: card.rs  config.rs  diff.rs  ids.rs  lib.rs  round.rs  session.rs
