[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
core = { path = "../core" }
registry = { path = "../registry" }
types  = { path = "../types" }
serde_json = "1"

[[bin]]
name = "spenser"
path = "src/main.rs"